add some comments on some classes and fix some bugs